[gd_scene load_steps=17 format=3 uid="uid://cbt8ur5rbka7c"]

[ext_resource type="Script" path="res://Zoovisitor/zoovisitor.gd" id="1_lkkw0"]
[ext_resource type="Script" path="res://StateMachines/Zoovisitor/Zoovisitor_State_Machine.gd" id="2_y6fkm"]
[ext_resource type="Script" path="res://StateMachines/Zoovisitor/States/Zoovisitor_Idle.gd" id="3_3cjqx"]
[ext_resource type="Script" path="res://StateMachines/Zoovisitor/States/Zoovisitor_Follow_Player.gd" id="4_u2767"]
[ext_resource type="Script" path="res://StateMachines/Zoovisitor/States/Zoovisitor_Attack.gd" id="5_mk8xy"]
[ext_resource type="Script" path="res://StateMachines/Zoovisitor/States/Zoovisitor_Death.gd" id="6_sifie"]
[ext_resource type="PackedScene" uid="uid://doos1hqfu3wdh" path="res://Zookeeper/Zookeeper_Model.tscn" id="7_ju5m7"]
[ext_resource type="PackedScene" uid="uid://cu3yh1k32fsye" path="res://Prefabs/random_material_color.tscn" id="8_ofa0p"]
[ext_resource type="Shader" uid="uid://bc4my8be82d57" path="res://Models/Entities/Zookeeper/ShirtShader.tres" id="9_iu73a"]
[ext_resource type="PackedScene" uid="uid://cquj4jyxco6ym" path="res://Prefabs/random_personality.tscn" id="10_84myp"]
[ext_resource type="Resource" uid="uid://d3x2wfm6fxrux" path="res://Personalities/Visitor1_Female.tres" id="11_uf2eb"]
[ext_resource type="Resource" uid="uid://bado35yuwh5ti" path="res://Personalities/Visitor1_Male.tres" id="12_ndiw3"]
[ext_resource type="Resource" uid="uid://bdvu75urkeknk" path="res://Personalities/Visitor2_Female.tres" id="13_3382f"]
[ext_resource type="Resource" uid="uid://cnhawqus81pf" path="res://Personalities/Visitor2_Male.tres" id="14_intx2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q7moh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jke0g"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("9_iu73a")
shader_parameter/Color = Color(0.780392, 0.388235, 0.858824, 1)

[node name="Zoovisitor" type="CharacterBody3D" groups=["enemy"]]
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_lkkw0")

[node name="World_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_q7moh")

[node name="ZoovisitorStateMachine" type="Node" parent="."]
script = ExtResource("2_y6fkm")
initial_state = NodePath("Follow_Player")

[node name="Idle" type="Node" parent="ZoovisitorStateMachine"]
script = ExtResource("3_3cjqx")

[node name="Follow_Player" type="Node" parent="ZoovisitorStateMachine"]
script = ExtResource("4_u2767")

[node name="Attack" type="Node" parent="ZoovisitorStateMachine"]
script = ExtResource("5_mk8xy")

[node name="Death" type="Node" parent="ZoovisitorStateMachine" node_paths=PackedStringArray("bone")]
script = ExtResource("6_sifie")
bone = NodePath("../../Zookeeper_Model/Armature_001/Skeleton3D/Physical Bone mixamorig_Spine2")

[node name="Navigation_Agent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Zookeeper_Model" parent="." instance=ExtResource("7_ju5m7")]

[node name="Skeleton3D" parent="Zookeeper_Model/Armature_001" index="0"]
bones/0/position = Vector3(-7.72729e-06, 1.55432, -104.275)
bones/1/rotation = Quaternion(-0.0801558, 8.91046e-15, -2.48068e-07, 0.996782)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(-3.57628e-07, 10.8382, -6.66343e-07)
bones/7/rotation = Quaternion(-0.0246162, 0.00256236, -0.103499, 0.994322)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(-9.63688e-06, 27.8415, -1.58086e-05)
bones/10/rotation = Quaternion(0.253284, 0.0616186, -0.22821, 0.938067)
bones/10/scale = Vector3(1, 1, 1)
bones/11/position = Vector3(1.90735e-06, 4.18899, 7.11515e-06)
bones/11/rotation = Quaternion(-0.0023154, -0.00117057, 0.00930022, 0.999953)
bones/12/rotation = Quaternion(-0.00166427, -0.000807499, 0.00691993, 0.999974)
bones/13/position = Vector3(8.34465e-07, 2.57497, 2.44224e-07)
bones/13/rotation = Quaternion(0.00577487, -0.11751, -0.048744, 0.991858)
bones/14/position = Vector3(2.25983, 9.10829, 0.517868)
bones/14/rotation = Quaternion(-6.10405e-12, -3.71922e-08, -0.000164122, 1)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(2.91133e-07, 3.69999, 5.62467e-07)
bones/15/rotation = Quaternion(-5.35394e-06, 1.61316e-07, 0.000255741, 1)
bones/16/position = Vector3(-6.47087e-08, 2.85001, 2.05763e-07)
bones/16/rotation = Quaternion(8.10606e-06, -1.60417e-07, -8.80775e-05, 1)
bones/17/rotation = Quaternion(-2.83947e-06, 0.00100277, 8.71191e-05, 0.999999)
bones/17/scale = Vector3(1, 1, 1)
bones/18/position = Vector3(-2.48329e-05, 9.53251, 4.63095e-05)
bones/18/rotation = Quaternion(-6.49691e-11, 4.19898e-08, -0.00050165, 1)
bones/19/position = Vector3(4.52045e-07, 3.70001, 1.53333e-05)
bones/19/rotation = Quaternion(-2.5862e-06, 3.61738e-08, 0.000849882, 1)
bones/20/rotation = Quaternion(2.58619e-06, -1.5119e-07, -0.000321958, 1)
bones/21/position = Vector3(-4.01207e-07, 2.94664, 1.32651e-06)
bones/21/rotation = Quaternion(-2.74392e-06, 0.00092906, 0.000166596, 1)
bones/22/position = Vector3(-1.86514, 9.1036, 0.043061)
bones/22/rotation = Quaternion(-1.78467e-11, 1.14419e-07, 0.000155976, 1)
bones/23/rotation = Quaternion(-2.64016e-06, 5.86753e-08, -0.000221428, 1)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(2.64022e-06, -3.9307e-08, -0.000112752, 1)
bones/25/position = Vector3(1.01472e-07, 2.63881, -1.652e-05)
bones/25/rotation = Quaternion(1.16762e-07, 0.000145964, -0.000799426, 1)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(-3.80628, 8.07668, 0.48671)
bones/26/rotation = Quaternion(4.23851e-06, 6.56715e-08, 0.000520447, 1)
bones/27/position = Vector3(-3.01202e-08, 3.6, -2.13743e-06)
bones/27/rotation = Quaternion(-6.05425e-07, 1.04332e-07, 0.00084633, 1)
bones/28/position = Vector3(-1.11986e-06, 2.09999, -1.03357e-05)
bones/28/rotation = Quaternion(3.57877e-06, -2.68243e-07, -0.000497008, 1)
bones/29/position = Vector3(-1.17017e-06, 2.11577, -4.388e-06)
bones/29/rotation = Quaternion(-3.54157e-06, 0.00156974, -4.10232e-05, 0.999999)
bones/29/scale = Vector3(1, 1, 1)
bones/30/scale = Vector3(1, 1, 1)
bones/31/position = Vector3(-4.76837e-07, 10.8377, -2.02153e-06)
bones/33/position = Vector3(6.12936e-06, 28.3288, 6.23057e-06)
bones/34/position = Vector3(-2.68173, 2.46615, 1.57617)
bones/34/rotation = Quaternion(0.253096, -0.0613235, 0.227353, 0.938346)
bones/35/rotation = Quaternion(-0.00206602, 0.00104309, -0.00821336, 0.999964)
bones/35/scale = Vector3(1, 1, 1)
bones/36/position = Vector3(-8.22544e-06, 3.41839, 3.48625e-06)
bones/36/rotation = Quaternion(-0.0015308, 0.000745049, -0.00607346, 0.99998)
bones/37/position = Vector3(-3.24845e-06, 2.58058, -2.40185e-05)
bones/37/rotation = Quaternion(0.00515177, 0.122683, 0.0416517, 0.991558)
bones/38/position = Vector3(-2.25986, 9.10932, 0.518008)
bones/38/rotation = Quaternion(1.12766e-06, -1.43901e-08, -4.40752e-05, 1)
bones/39/position = Vector3(-2.0854e-07, 3.70001, -2.58558e-05)
bones/39/rotation = Quaternion(6.22055e-07, 6.06931e-08, 0.000105156, 1)
bones/40/rotation = Quaternion(7.24941e-08, -1.20909e-07, -6.63413e-05, 1)
bones/41/rotation = Quaternion(-2.75439e-06, -0.00037744, -1.3016e-05, 1)
bones/42/position = Vector3(-3.62341e-05, 9.5334, -7.43225e-05)
bones/42/rotation = Quaternion(-9.27263e-07, -7.83184e-09, -3.16579e-05, 1)
bones/43/position = Vector3(2.93684e-07, 3.70001, -7.33839e-07)
bones/43/rotation = Quaternion(2.58624e-06, 9.21421e-08, 2.13113e-05, 1)
bones/44/rotation = Quaternion(-2.58623e-06, -2.24386e-07, 2.0518e-05, 1)
bones/45/position = Vector3(-3.41319e-07, 2.95288, -2.20348e-06)
bones/45/rotation = Quaternion(2.86989e-08, -0.001024, 2.80173e-05, 0.999999)
bones/46/position = Vector3(1.86508, 9.10454, 0.0429866)
bones/47/position = Vector3(1.21889e-06, 3.15002, 2.89108e-07)
bones/47/rotation = Quaternion(2.58675e-06, -2.81796e-08, -3.64913e-08, 1)
bones/48/position = Vector3(-1.23848e-07, 2.95, -5.32404e-06)
bones/48/rotation = Quaternion(-2.58624e-06, -3.96691e-07, -3.96689e-07, 1)
bones/49/rotation = Quaternion(-8.0881e-09, 0.000493664, 1.64096e-05, 1)
bones/50/position = Vector3(3.80626, 8.07779, 0.486836)
bones/50/rotation = Quaternion(-5.16583e-06, 3.55231e-08, 0.00204481, 0.999998)
bones/51/rotation = Quaternion(-3.02749e-06, -1.45544e-07, -0.000210767, 1)
bones/52/rotation = Quaternion(7.26606e-06, 5.18884e-07, -6.66557e-05, 1)
bones/53/position = Vector3(-5.55534e-07, 2.12552, -8.40792e-06)
bones/53/rotation = Quaternion(-3.82118e-06, -0.00078401, -0.000295904, 1)
bones/53/scale = Vector3(1, 1, 1)
bones/54/rotation = Quaternion(-3.40879e-08, 0.0103565, 0.999946, 2.57576e-07)
bones/54/scale = Vector3(1, 1, 1)
bones/55/rotation = Quaternion(-0.0380914, -3.41618e-08, 1.68717e-08, 0.999274)
bones/56/rotation = Quaternion(0.45974, 3.8654e-08, -1.43261e-07, 0.888054)
bones/58/rotation = Quaternion(4.36299e-08, 0.0116081, 5.06525e-10, 0.999933)
bones/59/rotation = Quaternion(-8.94491e-08, 0.010368, 0.999946, 2.67749e-07)
bones/59/scale = Vector3(1, 1, 1)
bones/60/rotation = Quaternion(-0.0381124, -1.32934e-07, 1.64336e-08, 0.999273)
bones/61/rotation = Quaternion(0.459749, 1.18317e-09, -1.56166e-07, 0.888049)
bones/61/scale = Vector3(1, 1, 1)
bones/63/rotation = Quaternion(1.21626e-08, -0.0118692, -1.44365e-10, 0.99993)

[node name="Physical Bone mixamorig_Hips" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="1"]
transform = Transform3D(1, 6.47148e-09, 4.69318e-07, 5.65743e-10, 0.999917, -0.0129172, -5.3455e-07, 0.0129171, 0.999917, -4.87412e-05, 1.62002, -109.361)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.86266e-05, 3.43812e-06, 5.08686)
body_offset = Transform3D(1, -1.76167e-14, -3.16646e-08, 3.35301e-08, 8.6613e-08, -1, 1.32353e-10, 1, 3.72529e-09, -3.84655e-05, 5.08686, -3.45707e-06)

[node name="Physical Bone mixamorig_Spine2" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="2"]
transform = Transform3D(1, -5.06703e-08, -9.81953e-08, 8.8719e-08, 0.992603, 0.121493, -6.01789e-08, -0.121492, 0.992592, 2.80613e-06, -2.18006, -141.937)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48275e-05, 0.000596017, 8.42831)
body_offset = Transform3D(1, -1.49012e-08, -2.60775e-08, 1.21072e-07, -2.13087e-06, -1, 5.96046e-08, 1.00001, -2.23517e-07, 1.50473e-05, 8.42831, -0.000594139)

[node name="Physical Bone mixamorig_Shoulder_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="3"]
transform = Transform3D(-0.205695, 0.0494836, 0.977363, 0.97856, 7.05174e-05, 0.205948, 0.0101922, 0.998774, -0.0484213, -9.86638, -4.43248, -144.319)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63092e-05, -0.00440294, 5.4193)
body_offset = Transform3D(0.999997, 7.00027e-05, -3.12924e-07, 1.04308e-07, -1.44891e-05, -0.999999, 7.83396e-08, 0.999999, 1.55157e-06, -1.43051e-05, 5.41929, 0.00439453)

[node name="Physical Bone mixamorig_Arm_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="4"]
transform = Transform3D(7.69031e-07, -1, 4.93234e-07, 1, 7.25485e-07, -9.62848e-07, 9.52471e-07, 5.28488e-07, 1, -29.1628, -5.54853, -144.057)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.15796e-05, -14, -0.004564)
body_offset = Transform3D(1, 1.41115e-07, -1.38883e-07, -5.95816e-08, 1, 1.69868e-07, 8.06094e-08, -1.15987e-07, 1, -5.96046e-05, 14, 0.00456238)

[node name="Physical Bone mixamorig_ForeArm_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="5"]
transform = Transform3D(6.86872e-07, -1, 4.88012e-07, 1, 6.43928e-07, -1.12704e-06, 1.1153e-06, 5.22613e-07, 1, -43.0043, -5.54851, -144.057)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.43453e-05, 1.90742e-05, -0.00442505)
body_offset = Transform3D(1, 1.41715e-07, -1.34868e-07, -5.95804e-08, 1, 1.71364e-07, 7.52312e-08, -1.18137e-07, 1, -4.43459e-05, -1.90735e-05, 0.00442505)

[node name="Physical Bone mixamorig_Hand_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="6"]
transform = Transform3D(7.52071e-08, -0.783674, 0.620083, -0.506168, -0.53572, -0.675086, 0.862435, -0.313873, -0.396671, -72.5656, -4.20755, -143.27)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00311995, 0.000573009, 1.98813)
body_offset = Transform3D(-0.506167, -0.535721, -0.675086, 1.76911e-07, 0.783673, -0.620084, 0.862436, -0.313872, -0.39667, 1.34089, 1.23236, 0.791504)

[node name="Physical Bone mixamorig_Shoulder_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="7"]
transform = Transform3D(-0.205706, -0.0494638, -0.977357, -0.97856, 0.000259815, 0.205958, -0.010187, 0.998773, -0.0484019, 9.86662, -4.43245, -144.319)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.73225e-06, -0.00445549, 5.41911)
body_offset = Transform3D(0.999999, -0.000254234, -6.55651e-07, -1.93715e-07, -5.18978e-05, -0.999994, 5.14664e-07, 0.999997, 2.79873e-06, 7.15256e-06, 5.41908, 0.00444031)

[node name="Physical Bone mixamorig_Arm_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="8"]
transform = Transform3D(2.61725e-06, -9.6485e-07, -1, -0.997313, 5.16483e-07, -2.41858e-06, 4.57883e-07, 0.999999, -9.05246e-07, 29.0836, -5.54848, -143.372)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.94591e-05, -0.68913, 13.9208)
body_offset = Transform3D(0.997313, -5.58993e-08, -1.27462e-07, -1.36022e-08, -2.94298e-07, -1, 4.22247e-08, 1, -2.49595e-07, 6.10352e-05, 13.9208, 0.689133)

[node name="Physical Bone mixamorig_ForeArm_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="9"]
transform = Transform3D(2.47485e-06, -1.93999e-06, -1, -1, 4.55266e-07, -2.20045e-06, -4.90251e-08, 1, -2.14861e-06, 57.1688, -5.54844, -144.057)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.80769e-05, -0.00454105, 14.1645)
body_offset = Transform3D(1, 3.77736e-09, -3.46384e-07, -1.6389e-07, -2.0489e-07, -1, -4.64264e-07, 1, -4.28406e-07, 9.29832e-05, 14.1645, 0.00454712)

[node name="Physical Bone mixamorig_Hand_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="10"]
transform = Transform3D(2.60299e-07, 0.78361, -0.621068, 0.506705, -0.535593, -0.673401, -0.858342, -0.313447, -0.394894, 72.5662, -4.20751, -143.269)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00541842, 0.00477022, 1.99138)
body_offset = Transform3D(-0.506705, 0.535595, 0.673399, -1.03582e-07, 0.783608, -0.621071, -0.858342, -0.313449, -0.394893, -1.3408, 1.23305, 0.792526)

[node name="Physical Bone mixamorig_UpLeg_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="11"]
transform = Transform3D(-1, -1.23765e-07, -1.3595e-06, -8.1353e-08, 0.999959, -0.00913971, 1.37868e-06, -0.00913971, -0.999958, -8.20775, 0.157464, -75.334)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.43242e-05, 0.000102948, 22.1902)
body_offset = Transform3D(1, 5.70421e-08, 1.37441e-06, 1.39283e-06, -0.00134403, -0.999999, -2.53552e-08, 1, -0.00134404, -4.48227e-05, 22.1902, 0.0297216)

[node name="Physical Bone mixamorig_Leg_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="12"]
transform = Transform3D(-1, -2.50622e-05, -1.53692e-06, -4.04726e-08, 0.997186, 0.0696875, 1.45497e-06, 0.0694955, -0.997562, -8.20564, -1.19122, -30.9396)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00212211, -0.0597903, 22.2637)
body_offset = Transform3D(1, 2.50641e-05, 1.51551e-06, 1.43291e-06, 0.00117324, -0.999992, 5.71907e-08, 0.999604, 0.00133906, -0.00215435, 22.2636, 0.0299542)

[node name="Physical Bone mixamorig_Foot_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="13"]
transform = Transform3D(-1, -1.03679e-06, -9.98543e-07, -2.18748e-07, 0.631742, -0.775179, 1.16805e-06, -0.775178, -0.631741, -8.19245, 2.61247, -4.36543)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0153301, -0.000256728, 6.90836)
body_offset = Transform3D(1, 1.08346e-06, 1.27463e-06, 8.44424e-07, 1.66893e-06, -1, -1.09031e-06, 1, 2.98023e-08, -0.0153389, 6.90836, 0.000256538)

[node name="Physical Bone mixamorig_UpLeg_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="14"]
transform = Transform3D(-1, -2.4516e-07, -1.35691e-06, -2.2156e-07, 0.999856, -0.00911875, 1.36661e-06, -0.00911369, -0.999957, 8.20783, 0.156961, -75.3341)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.48553e-05, 0.00014458, 22.1902)
body_offset = Transform3D(1, 6.79715e-08, 1.39346e-06, 1.40115e-06, -0.00129582, -0.999998, -5.49839e-08, 0.999897, -0.00130009, -4.57764e-05, 22.1901, 0.0287046)

[node name="Physical Bone mixamorig_Leg_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="15"]
transform = Transform3D(-0.999998, -1.88633e-05, -1.48474e-06, 4.08941e-07, 0.997051, 0.0696654, 9.7172e-07, 0.0697216, -0.997571, 8.20789, -1.19173, -30.9392)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.38943e-05, -0.05779, 22.2641)
body_offset = Transform3D(0.999998, 1.89507e-05, 1.48485e-06, 9.41484e-07, 0.00138897, -0.999999, 3.87e-07, 0.999485, 0.00129736, -0.000105858, 22.2642, 0.0288756)

[node name="Physical Bone mixamorig_Foot_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="16"]
transform = Transform3D(-1, 3.80571e-06, -5.84364e-07, -1.86461e-07, 0.631737, -0.775078, 8.19383e-07, -0.774285, -0.631737, 8.20793, 2.61206, -4.36527)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000142351, -0.000156372, 6.90859)
body_offset = Transform3D(1, -3.614e-06, 7.91427e-07, 5.80164e-07, 0.0005638, -0.999919, -9.44921e-07, 0.999304, 6.21676e-05, -0.00014782, 6.90803, -0.000273228)

[node name="RandomMaterialColor" parent="Zookeeper_Model" node_paths=PackedStringArray("MeshNode") instance=ExtResource("8_ofa0p")]
MeshNode = NodePath("../Armature_001/Skeleton3D/Zookeeper")
ShirtMaterial = SubResource("ShaderMaterial_jke0g")
StartColor = Color(0.788235, 0.411765, 0.8, 1)

[node name="RandomPersonality" parent="Zookeeper_Model" node_paths=PackedStringArray("MeshNode", "audioPlayer") instance=ExtResource("10_84myp")]
MeshNode = NodePath("../Armature_001/Skeleton3D/Zookeeper")
Personalities = Array[Resource("res://Personality.gd")]([ExtResource("11_uf2eb"), ExtResource("12_ndiw3"), ExtResource("13_3382f"), ExtResource("14_intx2")])
audioPlayer = NodePath("AudioStreamPlayer3D")

[connection signal="OnAttack" from="." to="Zookeeper_Model/RandomPersonality" method="play_attack_sound"]
[connection signal="OnGetHit" from="." to="Zookeeper_Model/RandomPersonality" method="play_hit_sound"]
[connection signal="target_reached" from="Navigation_Agent" to="." method="_on_navigation_agent_target_reached"]

[editable path="Zookeeper_Model"]
[editable path="Zookeeper_Model/RandomPersonality"]
